# flag-crab

./: .gitignore  Cargo.toml  Procfile  README.md
src/: main.rs
src/adapters/: flag_crab.rs  mod.rs
src/adapters/api/: get_flag_api_handler.rs  mod.rs
src/adapters/persistence/: flag_repo.rs  in_memory_flag_repo.rs  mod.rs
src/adapters/web/: add_flag_handler.rs  flag_detail_handler.rs  home_handler.rs  mod.rs  update_flag_handler.rs
src/domain/: flag.rs
src/usecases/: add_flag.rs  get_all_flags.rs  get_flag.rs  mod.rs  update_flag.rs  usecase.rs
templates/: flag.hbs  home.hbs  home.hbs.old  new_home.hbs
templates/static/css/: barebones.css  custom.css
tests/: get_flag_integration.rs
