[package]
name = "flag-crab"
version = "0.1.0"
authors = ["laura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = true
features = ["handlebars_templates", "tera_templates", "templates"]