[package]
name = "flag-crab"
version = "0.1.0"
authors = ["laura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
rocket_okapi = "0.5"
schemars = "0.7"
okapi = { version = "0.5.0-alpha-1", features = ["derive_json_schema"] }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = true
features = ["handlebars_templates", "templates"]

[dev-dependencies]
reqwest = { version = "0.10.10", features = ["blocking"] }