[package]
name = "flag-crab"
version = "0.1.0"
authors = ["laura"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
rocket_okapi = { version = "0.6.0-alpha-1" }
schemars = { version = "0.8.0-alpha-4", features = ["preserve_order", "chrono"] }
okapi = { version = "0.5.0-alpha-1" }

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = true
features = ["handlebars_templates", "templates", "json"]

[dev-dependencies]
reqwest = { version = "0.10.10", features = ["blocking"] }